# cmp

./: .gitignore  .project  COPYRIGHT  DEPENDENCY  README  README.rst  map_connectome.py  setup.py
cmp/: .xdebug_tkmedit  __init__.py  configuration.py  configuration.py.orig  connectome.py  gui.py  gui.py.orig  helpgui.py  helpgui.py.orig  info.py  logme.py  util.py  util.py.orig
cmp/data/colortable_and_gcs/: New_colortable_125_lh.txt  New_colortable_125_rh.txt  New_colortable_250_rh.txt  P17_28_lh_colortable.txt  P17_28_rh_colortable.txt  P1_16_lh_colortable.txt  original_color_125_R.txt  original_color_250_L.txt  original_color_250_R.txt  original_color_P17_28_L.txt  original_color_P17_28_R.txt  original_color_P1_16_L.txt  original_color_P1_16_R.txt  original_color_P29_36_L.txt  original_color_P29_36_R.txt
cmp/pipeline/: pipeline_pb2.py  pipeline_status.py
cmp/stages/connectionmatrix/: creatematrix.py
cmp/stages/converter/: cffconverter.py  dicomconverter.py  dicomconverter.py~
cmp/stages/epiunwarp/: epiunwarp.py
cmp/stages/parcellation/: mask_creation_convert.py  maskcreation.py  maskcreation_new.py
cmp/stages/postprocessing/: fiberclustering.py  fiberfilter.py
cmp/stages/preprocessing/: organize.py
cmp/stages/reconstruction/: dtk.py  dtk.py~
cmp/stages/registration/: apply_registration.py  registration.py
cmp/stages/rsfmri/: correlation.py  rsfmri_correlation.py  rsfmri_preprocessing.py  rsfmri_registration.py
cmp/stages/segmentation/: freesurfer.py
cmp/stages/stats/: fiber_statistics.py  network_statistics.py
cmp/stages/template_module/: modulename.py
cmp/stages/tractography/: tractography.py
cmp/utility/: scalars.py
cmt/: __init__.py  configuration.py  connectome.py  gui.py  logme.py  one_label_script.sh  util.py
cmt/data/colortable_and_gcs/: New_colortable_250_lh.txt  New_colortable_60_lh.txt  New_colortable_60_rh.txt  P1_16_rh_colortable.txt  P29_35_lh_colortable.txt  P29_35_rh_colortable.txt
cmt/matlab_related/: mask_creation.m  new_order_mai.mat  ordred_33parcels.mat  roi_creation.m  roi_creation_level.m  roi_merge.m  script_roi_finalize.m
cmt/matlab_related/tractography/: DTB__create_connection_matrix.m  DTB__fibers2cmat.m  DTB__load_endpoints_from_trk.m  mat_mask.mat  roi_index.mat
cmt/modules/: DONE.txt  util.py
cmt/modules/connectionmatrix/: DTB__cmat_scalar.py  DTB__cmat_shape.py  DTB__load_endpoints_from_trk.py  converter.py  creatematrix.py  nodes.py  raw_step7.py  step7.py  tester.sh  trackvis.py
cmt/modules/converter/: cffconverter.py  dicomconverter.py  nodes.py  raw_step0.py  raw_step8.py  step0.py  step8.py
cmt/modules/diffusion/: dtk.py  nodes.py  raw_step4.py  step4.py
cmt/modules/freesurfer/: nodes.py  raw_step2.py  step2.py
cmt/modules/mask/: README  create_annot_label.py  maskcreation.py  nodes.py  reorganize_stuff.py  step3.py
cmt/modules/parcellation/: maskcreation.py
cmt/modules/postprocessing/: fiberclustering.py  fiberfilter.py
cmt/modules/preprocessing/: organize.py
cmt/modules/reconstruction/: dtk.py
cmt/modules/registration/: apply_registration.py  nodes.py  raw_step1.py  raw_step5.py  registration.py  step1.py  step4_registration_applyToTractoMasks.py  step5.py
cmt/modules/segmentation/: freesurfer.py
cmt/modules/stats/: fiber_statistics.py  statistics.py
cmt/modules/tractography/: nodes.py  raw_step6.py  step6.py  tractography.py
cmt/pipeline/: pipeline.proto  pipeline_pb2.py  pipeline_status.py
cmt/stages/connectionmatrix/: creatematrix.py
cmt/stages/converter/: cffconverter.py  dicomconverter.py
cmt/stages/postprocessing/: fiberclustering.py  fiberfilter.py
cmt/stages/reconstruction/: dtk.py
data/default_project/: cmtpaths.ini  map_connectome.py  map_connectome_christophe.py  map_connectome_final.py  meta.cml  subjects.graphml
data/myData/: create_matrix.py  decimate_fibers.py  gen_data.py  stream.trk  vis_data.py
doc/source/: conf.py  download.rst  exampleresults.rst  index.rst  installation.rst  mappingsteps.rst
example/default_project/: map_connectome.py
scratch/: T0.trk  T02.trk  Tnew.trk  atlas_creation_idea.py  compute_coords.py  dicoms_2_tracks.py  extract_and_merge_cnetwork.py  map_dti_script.py  ordered_leftlabels.csv  ordered_leftlabels_resolution125.csv  ordered_leftlabels_resolution250.csv  ordered_leftlabels_resolution33.csv  ordered_leftlabels_resolution60.csv  ordered_rightlabels_resolution1015.csv  ordered_rightlabels_resolution125.csv  ordered_rightlabels_resolution250.csv  ordered_rightlabels_resolution500.csv  ordered_rightlabels_resolution60.csv  reorder_labels_parcellation1015.py  run_tvhardirecon.py  subdivision_left_right_regions.txt  test_diffusion.py
scratch/atlas_creation_idea/: atlas_creation_idea.py
scratch/connectome/: cmat_big_structure.py  create_matrix.py
scratch/dipy/: dicoms_2_tracks.py
scratch/dti/: FDT_bvecs.m  cv_dtk2matlab_dti.m  map_connectome_dti_HUG.sh  script_tracto_dti_HUG.m
scratch/fiberepproblem/: create_WM_GM_masks.m
scratch/fs_parsing/: reconall.txt
scratch/ideas/: WMfillHolesInLabels.m  convert.py  plotonsphere.py
scratch/inversecode/: scratch.py  util.py
scratch/rsfmri/: cv_rsfmri2FC.m  prep_rsFMRI.sh  readme.txt
scratch/scripts/: map_connectome_dti.py
scratch/sh-simulator/: surftest.py
scratch/statistics/: main.py
scratch/viz/: plotmatrix.py  vis_data.py  visualize.py
scratch/wm_mask/: mask_creation_PH.m
scripts/: .xdebug_tkmedit  connectomemapper  connectomemapper.py  map_connectome.py
src/: README.rst
src/DTB/: CMakeCache.txt  CMakeLists.txt
src/cpp/: CMakeLists.txt  FindBLITZ.cmake  FindNIFTI.cmake
src/cpp/DTB_asintotic_matrix/: CMakeLists.txt  cmx_matrix.cxx  main.cxx  tractography.cxx
src/cpp/DTB_gfa/: CMakeLists.txt  main.cxx
src/cpp/DTB_matrix/: CMakeLists.txt  cmx_matrix.cxx  main.cxx
src/cpp/DTB_scalar/: CMakeLists.txt  fibers_stats.cxx  main.cxx
src/cpp/DTB_streamline/: CMakeLists.txt  main.cxx  tractography.cxx
src/cpp/DTB_viewer/: CMakeLists.txt  gl_aux_functions.cxx  glut_callbacks.cxx  main.cxx
src/cpp/common/: lib_nii.cxx  lib_trk.cxx  lib_ui.cxx
(+129 files in other folders)
